[gd_scene load_steps=35 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/space.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ingame.gd" type="Script" id=3]
[ext_resource path="res://scenes/cargo.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/planet-03-off.png" type="Texture" id=5]
[ext_resource path="res://images/planet-03-on.png" type="Texture" id=6]
[ext_resource path="res://images/planet-02-on.png" type="Texture" id=7]
[ext_resource path="res://images/planet-02-off.png" type="Texture" id=8]
[ext_resource path="res://images/planet-04-off.png" type="Texture" id=9]
[ext_resource path="res://images/planet-05-off.png" type="Texture" id=10]
[ext_resource path="res://images/planet-06-off.png" type="Texture" id=11]
[ext_resource path="res://images/planet-05-on.png" type="Texture" id=12]
[ext_resource path="res://images/planet-06-on.png" type="Texture" id=13]
[ext_resource path="res://images/planet-07-off.png" type="Texture" id=14]
[ext_resource path="res://images/planet-01-on.png" type="Texture" id=15]
[ext_resource path="res://images/planet-04-on.png" type="Texture" id=16]
[ext_resource path="res://images/planet-01-off.png" type="Texture" id=17]
[ext_resource path="res://images/planet-11-on.png" type="Texture" id=18]
[ext_resource path="res://images/planet-07-on.png" type="Texture" id=19]
[ext_resource path="res://images/planet-10-on.png" type="Texture" id=20]
[ext_resource path="res://images/planet-08-on.png" type="Texture" id=21]
[ext_resource path="res://images/planet-09-off.png" type="Texture" id=22]
[ext_resource path="res://images/planet-08-off.png" type="Texture" id=23]
[ext_resource path="res://images/planet-09-on.png" type="Texture" id=24]
[ext_resource path="res://images/planet-10-off.png" type="Texture" id=25]
[ext_resource path="res://images/planet-11-off.png" type="Texture" id=26]
[ext_resource path="res://images/maelstrom-off.png" type="Texture" id=27]
[ext_resource path="res://images/maelstrom-on.png" type="Texture" id=28]
[ext_resource path="res://images/hud.png" type="Texture" id=29]
[ext_resource path="res://scenes/ship.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/character.tscn" type="PackedScene" id=31]
[ext_resource path="res://images/hud-top.png" type="Texture" id=32]
[ext_resource path="res://images/hud-center.png" type="Texture" id=33]
[ext_resource path="res://images/prompt.png" type="Texture" id=34]

[node name="Map" type="Node2D"]
script = ExtResource( 3 )

[node name="Spaces" type="Node2D" parent="."]

[node name="Space1" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 52, 475 )

[node name="Space2" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 103, 465 )

[node name="Space3" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 56, 416 )
space_1 = 1

[node name="Button" parent="Spaces/Space3" index="0"]
texture_normal = ExtResource( 15 )
texture_disabled = ExtResource( 17 )

[node name="Label" parent="Spaces/Space3" index="1"]
text = "Acan"

[node name="Space4" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 104, 402 )
space_1 = 2
space_2 = 3

[node name="Space5" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 170, 347 )
space_1 = 4

[node name="Button" parent="Spaces/Space5" index="0"]
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[node name="Label" parent="Spaces/Space5" index="1"]
text = "Bord"

[node name="Faction" parent="Spaces/Space5" index="2"]
text = "(Bsyn)"

[node name="Space6" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 123, 315 )
space_1 = 4

[node name="Space7" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 136, 241 )
space_1 = 6

[node name="Space8" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 176, 251 )
space_1 = 7

[node name="Space9" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 222, 266 )
space_1 = 5
space_2 = 8

[node name="Button" parent="Spaces/Space9" index="0"]
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 5 )

[node name="Label" parent="Spaces/Space9" index="1"]
text = "Clot"

[node name="Faction" parent="Spaces/Space9" index="2"]
text = "(Cimp)"

[node name="Space10" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 226, 136 )
space_1 = 8

[node name="Button" parent="Spaces/Space10" index="0"]
texture_normal = ExtResource( 16 )
texture_disabled = ExtResource( 9 )

[node name="Label" parent="Spaces/Space10" index="1"]
text = "Dmon"

[node name="Faction" parent="Spaces/Space10" index="2"]
text = "(Dreb)"

[node name="Space11" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 268, 108 )
space_1 = 10

[node name="Space12" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 329, 122 )
space_1 = 11

[node name="Space13" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 360, 108 )
space_1 = 12

[node name="Button" parent="Spaces/Space13" index="0"]
texture_normal = ExtResource( 28 )
texture_disabled = ExtResource( 27 )

[node name="Label" parent="Spaces/Space13" index="1"]
visible = false
text = "Planet"

[node name="Space14" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 400, 81 )
space_1 = 13

[node name="Button" parent="Spaces/Space14" index="0"]
texture_normal = ExtResource( 12 )
texture_disabled = ExtResource( 10 )

[node name="Label" parent="Spaces/Space14" index="1"]
text = "Ekes"

[node name="Faction" parent="Spaces/Space14" index="2"]
text = "(Bsyn)"

[node name="Space15" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 283, 152 )
space_1 = 10

[node name="Space16" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 383, 141 )
space_1 = 12
space_2 = 15

[node name="Space17" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 473, 116 )
space_1 = 16

[node name="Space18" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 397, 33 )
space_1 = 14

[node name="Space19" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 444, 39 )
space_1 = 18

[node name="Space20" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 445, 100 )
space_1 = 19

[node name="Space21" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 481, 73 )
space_1 = 17
space_2 = 20

[node name="Space22" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 535, 30 )
space_1 = 21

[node name="Space23" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 562, 63 )
space_1 = 22

[node name="Space24" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 652, 93 )
space_1 = 23

[node name="Space25" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 686, 59 )
space_1 = 24

[node name="Button" parent="Spaces/Space25" index="0"]
texture_normal = ExtResource( 21 )
texture_disabled = ExtResource( 23 )

[node name="Label" parent="Spaces/Space25" index="1"]
text = "Ftat"

[node name="Faction" parent="Spaces/Space25" index="2"]
text = "(Ahut)"

[node name="Space26" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 536, 114 )
space_1 = 17

[node name="Space27" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 643, 139 )
space_1 = 24
space_2 = 26

[node name="Button" parent="Spaces/Space27" index="0"]
texture_normal = ExtResource( 24 )
texture_disabled = ExtResource( 22 )

[node name="Label" parent="Spaces/Space27" index="1"]
text = "Gnal"

[node name="Faction" parent="Spaces/Space27" index="2"]
text = "(Ahut)"

[node name="Space28" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 719, 88 )
space_1 = 25

[node name="Space29" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 688, 108 )
space_1 = 24

[node name="Space30" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 692, 145 )
space_1 = 29

[node name="Space31" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 784, 117 )
space_1 = 28

[node name="Button" parent="Spaces/Space31" index="0"]
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 11 )

[node name="Label" parent="Spaces/Space31" index="1"]
text = "Hryl"

[node name="Faction" parent="Spaces/Space31" index="2"]
text = "(Dreb)"

[node name="Space32" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 808, 179 )
space_1 = 31

[node name="Space33" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 859, 222 )
space_1 = 32

[node name="Space34" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 896, 236 )
space_1 = 33

[node name="Space35" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 725, 172 )
space_1 = 30

[node name="Space36" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 772, 171 )
space_1 = 32
space_2 = 35

[node name="Space37" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 813, 213 )
space_1 = 36

[node name="Space38" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 828, 261 )
space_1 = 37

[node name="Button" parent="Spaces/Space38" index="0"]
texture_normal = ExtResource( 19 )
texture_disabled = ExtResource( 14 )

[node name="Label" parent="Spaces/Space38" index="1"]
text = "Inab"

[node name="Faction" parent="Spaces/Space38" index="2"]
text = "(Cimp)"

[node name="Space39" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 951, 296 )
space_1 = 34

[node name="Button" parent="Spaces/Space39" index="0"]
texture_normal = ExtResource( 20 )
texture_disabled = ExtResource( 25 )

[node name="Label" parent="Spaces/Space39" index="1"]
text = "Jkaf"

[node name="Space40" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 898, 303 )
space_1 = 38

[node name="Space41" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 915, 370 )
space_1 = 39
space_2 = 40

[node name="Space42" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 889, 431 )
space_1 = 41

[node name="Button" parent="Spaces/Space42" index="0"]
texture_normal = ExtResource( 18 )
texture_disabled = ExtResource( 26 )

[node name="Label" parent="Spaces/Space42" index="1"]
text = "Ktak"

[node name="Space43" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 931, 429 )
space_1 = 41

[node name="Space44" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 925, 471 )
space_1 = 43

[node name="Space45" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 977, 428 )
space_1 = 39

[node name="Space46" parent="Spaces" instance=ExtResource( 2 )]
position = Vector2( 969, 465 )
space_1 = 45

[node name="Player" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="HudTop" type="TextureRect" parent="CanvasLayer"]
margin_right = 350.0
margin_bottom = 50.0
texture = ExtResource( 32 )

[node name="TurnIndicator" type="MarginContainer" parent="CanvasLayer"]
margin_right = 350.0
margin_bottom = 50.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TurnIndicator"]
margin_right = 350.0
margin_bottom = 50.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="TurnIndicator" type="Label" parent="CanvasLayer/TurnIndicator/MarginContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 9.0
margin_right = 346.0
margin_bottom = 40.0
text = "Turn 1, Planning Step
Move to a highlighted space or Work for 2000 credits!"

[node name="HudCenter" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -204.0
margin_right = 512.0
margin_bottom = -174.0
texture = ExtResource( 33 )

[node name="Fame" type="Label" parent="CanvasLayer/HudCenter"]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 8.0
margin_right = 53.0
margin_bottom = 22.0
text = "Fame: 0"

[node name="Money" type="Label" parent="CanvasLayer/HudCenter"]
unique_name_in_owner = true
margin_left = 74.0
margin_top = 8.0
margin_right = 133.0
margin_bottom = 22.0
text = "Money: 0"

[node name="Reputation" type="Label" parent="CanvasLayer/HudCenter"]
unique_name_in_owner = true
margin_left = 186.0
margin_top = 8.0
margin_right = 255.0
margin_bottom = 22.0
text = "Reputation: Ahut: 0   Bsyn: 0   Cimp: 0   Dreb: 0"

[node name="Done" type="Button" parent="CanvasLayer/HudCenter"]
unique_name_in_owner = true
margin_left = 973.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 25.0
disabled = true
text = "Done"

[node name="Hud" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -170.0
margin_right = 512.0
texture = ExtResource( 29 )

[node name="Market" type="MarginContainer" parent="CanvasLayer"]
margin_top = 406.0
margin_right = 1024.0
margin_bottom = 582.0
custom_constants/margin_right = 2
custom_constants/margin_left = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Market"]
margin_left = 2.0
margin_right = 1022.0
margin_bottom = 176.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Market/HBoxContainer"]
margin_right = 100.0
margin_bottom = 176.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Market/HBoxContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 16.0
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="CanvasLayer/Market/HBoxContainer/VBoxContainer/MarginContainer"]
margin_top = 2.0
margin_right = 100.0
margin_bottom = 16.0
text = "Cargo"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Market/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 140.0

[node name="MarketCargo" parent="CanvasLayer/Market/HBoxContainer/VBoxContainer/MarginContainer2" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Market/HBoxContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 100.0
margin_bottom = 164.0
custom_constants/separation = 0
alignment = 1

[node name="MarketCargoBuy" type="Button" parent="CanvasLayer/Market/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 2.0
margin_right = 38.0
margin_bottom = 20.0
disabled = true
text = "Buy"

[node name="MarketCargoDiscard" type="Button" parent="CanvasLayer/Market/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 38.0
margin_right = 98.0
margin_bottom = 20.0
disabled = true
text = "Discard"

[node name="Character" type="MarginContainer" parent="CanvasLayer"]
margin_left = 712.0
margin_top = 412.0
margin_right = 1024.0
margin_bottom = 576.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_left = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Character"]
margin_left = 2.0
margin_right = 310.0
margin_bottom = 164.0

[node name="CharacterContainer" type="VBoxContainer" parent="CanvasLayer/Character/HBoxContainer"]
margin_right = 100.0
margin_bottom = 164.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Character/HBoxContainer/CharacterContainer"]
margin_right = 100.0
margin_bottom = 16.0
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="CanvasLayer/Character/HBoxContainer/CharacterContainer/MarginContainer"]
margin_top = 2.0
margin_right = 100.0
margin_bottom = 16.0
text = "Character"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Character/HBoxContainer/CharacterContainer"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 140.0

[node name="Character" parent="CanvasLayer/Character/HBoxContainer/CharacterContainer/MarginContainer2" instance=ExtResource( 31 )]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Character/HBoxContainer/CharacterContainer"]
margin_top = 144.0
margin_right = 100.0
margin_bottom = 164.0
custom_constants/separation = 0
alignment = 1

[node name="Work" type="Button" parent="CanvasLayer/Character/HBoxContainer/CharacterContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 7.0
margin_right = 52.0
margin_bottom = 20.0
text = "Work"

[node name="Heal" type="Button" parent="CanvasLayer/Character/HBoxContainer/CharacterContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 52.0
margin_right = 93.0
margin_bottom = 20.0
disabled = true
text = "Heal"

[node name="ShipContainer" type="VBoxContainer" parent="CanvasLayer/Character/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 164.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Character/HBoxContainer/ShipContainer"]
margin_right = 100.0
margin_bottom = 16.0
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="CanvasLayer/Character/HBoxContainer/ShipContainer/MarginContainer"]
margin_top = 2.0
margin_right = 100.0
margin_bottom = 16.0
text = "Ship"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Character/HBoxContainer/ShipContainer"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 140.0

[node name="Ship" parent="CanvasLayer/Character/HBoxContainer/ShipContainer/MarginContainer2" instance=ExtResource( 30 )]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Character/HBoxContainer/ShipContainer"]
margin_top = 144.0
margin_right = 100.0
margin_bottom = 164.0
custom_constants/separation = 0
alignment = 1

[node name="Repair" type="Button" parent="CanvasLayer/Character/HBoxContainer/ShipContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 76.0
margin_bottom = 20.0
disabled = true
text = "Repair"

[node name="CargoContainer" type="VBoxContainer" parent="CanvasLayer/Character/HBoxContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 164.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Character/HBoxContainer/CargoContainer"]
margin_right = 100.0
margin_bottom = 16.0
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="CanvasLayer/Character/HBoxContainer/CargoContainer/MarginContainer"]
margin_top = 2.0
margin_right = 100.0
margin_bottom = 16.0
text = "Cargo"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Character/HBoxContainer/CargoContainer"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 140.0

[node name="ShipCargo" parent="CanvasLayer/Character/HBoxContainer/CargoContainer/MarginContainer2" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Character/HBoxContainer/CargoContainer"]
margin_top = 144.0
margin_right = 100.0
margin_bottom = 164.0
custom_constants/separation = 0
alignment = 1

[node name="ShipCargoSell" type="Button" parent="CanvasLayer/Character/HBoxContainer/CargoContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 2.0
margin_right = 37.0
margin_bottom = 20.0
disabled = true
text = "Sell"

[node name="ShipCargoDiscard" type="Button" parent="CanvasLayer/Character/HBoxContainer/CargoContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 37.0
margin_right = 97.0
margin_bottom = 20.0
disabled = true
text = "Discard"

[node name="HiddenCargoContainer" type="VBoxContainer" parent="CanvasLayer/Character/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 312.0
margin_right = 412.0
margin_bottom = 164.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer"]
margin_right = 100.0
margin_bottom = 16.0
custom_constants/margin_top = 2

[node name="Label" type="Label" parent="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer/MarginContainer"]
margin_top = 2.0
margin_right = 100.0
margin_bottom = 16.0
text = "Hidden Cargo"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 140.0

[node name="HiddenCargo" parent="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer/MarginContainer2" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer"]
margin_top = 144.0
margin_right = 100.0
margin_bottom = 164.0
custom_constants/separation = 0
alignment = 1

[node name="HiddenCargoSell" type="Button" parent="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 2.0
margin_right = 37.0
margin_bottom = 20.0
disabled = true
text = "Sell"

[node name="HiddenCargoDiscard" type="Button" parent="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 37.0
margin_right = 97.0
margin_bottom = 20.0
disabled = true
text = "Discard"

[node name="PromptContainer" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 50.0
texture = ExtResource( 34 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PromptContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -48.0
margin_right = 130.0
margin_bottom = 48.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PromptContainer/MarginContainer"]
margin_right = 260.0
margin_bottom = 96.0

[node name="FailedLabel" type="Label" parent="CanvasLayer/PromptContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 260.0
margin_bottom = 31.0
text = "Smuggling failed!
Encounter step will be skipped!"
align = 1

[node name="FailedSell" type="Button" parent="CanvasLayer/PromptContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 35.0
margin_right = 260.0
margin_bottom = 55.0
text = "Sell Cargo (Ground Combat vs 3 Attack)"

[node name="FailedSell2" type="Button" parent="CanvasLayer/PromptContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 59.0
margin_right = 260.0
margin_bottom = 79.0
text = "Keep Cargo"

[connection signal="pressed" from="CanvasLayer/HudCenter/Done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="CanvasLayer/Market/HBoxContainer/VBoxContainer/HBoxContainer/MarketCargoBuy" to="." method="_on_market_cargo_buy_pressed"]
[connection signal="pressed" from="CanvasLayer/Market/HBoxContainer/VBoxContainer/HBoxContainer/MarketCargoDiscard" to="." method="_on_market_cargo_discard_pressed"]
[connection signal="pressed" from="CanvasLayer/Character/HBoxContainer/CharacterContainer/HBoxContainer/Work" to="." method="_on_work_pressed"]
[connection signal="pressed" from="CanvasLayer/Character/HBoxContainer/CharacterContainer/HBoxContainer/Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="CanvasLayer/Character/HBoxContainer/ShipContainer/HBoxContainer/Repair" to="." method="_on_repair_pressed"]
[connection signal="pressed" from="CanvasLayer/Character/HBoxContainer/CargoContainer/HBoxContainer/ShipCargoSell" to="." method="_on_ship_cargo_sell_pressed"]
[connection signal="pressed" from="CanvasLayer/Character/HBoxContainer/CargoContainer/HBoxContainer/ShipCargoDiscard" to="." method="_on_ship_cargo_discard_pressed"]
[connection signal="pressed" from="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer/HBoxContainer/HiddenCargoSell" to="." method="_on_hidden_cargo_sell_pressed"]
[connection signal="pressed" from="CanvasLayer/Character/HBoxContainer/HiddenCargoContainer/HBoxContainer/HiddenCargoDiscard" to="." method="_on_hidden_cargo_discard_pressed"]
[connection signal="pressed" from="CanvasLayer/PromptContainer/MarginContainer/VBoxContainer/FailedSell" to="." method="_on_failed_sell_pressed"]
[connection signal="pressed" from="CanvasLayer/PromptContainer/MarginContainer/VBoxContainer/FailedSell2" to="." method="_on_failed_sell2_pressed"]

[editable path="Spaces/Space3"]
[editable path="Spaces/Space5"]
[editable path="Spaces/Space9"]
[editable path="Spaces/Space10"]
[editable path="Spaces/Space13"]
[editable path="Spaces/Space14"]
[editable path="Spaces/Space25"]
[editable path="Spaces/Space27"]
[editable path="Spaces/Space31"]
[editable path="Spaces/Space38"]
[editable path="Spaces/Space39"]
[editable path="Spaces/Space42"]
